--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     ],
     "minimum-stability": "beta",
     "require": {
-        "eftec/bladeone": "^4.9"
+        "eftec/bladeone": "^4.9",
+        "vlucas/phpdotenv": "^5.5"
     },
     "autoload": {},
     "config": {
