routes roomDetails updated

--- a/app/.htaccess
+++ b/app/.htaccess
@@ -5,4 +5,6 @@ RewriteRule ^about$ /controllers/about.php [L]
 RewriteRule ^contact$ /controllers/contact.php [L]
 RewriteRule ^offers$ /controllers/offers.php [L]
 RewriteRule ^rooms$ /controllers/rooms.php [L]
-RewriteRule ^roomDetails/([0-9]+)$ controllers/roomDetails.php?id=$1 [L]
+RewriteRule ^roomDetails/(\d+)$ /controllers/roomDetails.php?id=$1 [L]
+RewriteRule ^home$ controllers/index.php [L]
+RewriteRule ^controllers$ ^controllers$ [L]
